--- a/Zadatak 10/style.scss
+++ b/Zadatak 10/style.scss
@@ -59,7 +59,6 @@ body::before {
     top: 40%;
     right: 15%;
     left: 15%;
-    display: flex;
 
     .container__box {
         flex: 50%;
@@ -119,27 +118,37 @@ body::before {
 
 @media only screen and (min-width: 150px) and (max-width: 439px) {
     body {
-        height: 1500px;
+        height: 1700px;
+    }
+
+    .header {
+        top: 10%;
     }
     .container {
         display: block;
+        top: 25%;
 
         .container__box {
             margin-bottom: 100px;
         }
     }
     .dots {
-        bottom: 50%;
+        top: 90%;
         width: 30%;
     }
 }
 
 @media only screen and (min-width: 440px) and (max-width: 649px) {
     body {
-        height: 1800px;
+        height: 1300px;
+    }
+
+    .header {
+        top: 10%;
     }
     .container {
         display: block;
+        top: 25%;
 
         .container__box {
             margin-bottom: 100px;
@@ -147,16 +156,21 @@ body::before {
     }
     .dots {
         width: 30%;
-        top: 95%;
+        top: 90%;
     }
 }
 
-@media only screen and (min-width: 650px) and (max-width: 900px) {
+@media only screen and (min-width: 650px) and (max-width: 935px) {
     body {
-        height: 1500px;
+        height: 1300px;
+    }
+
+    .header {
+        top: 10%;
     }
     .container {
         display: block;
+        top: 25%;
 
         .container__box {
             margin-bottom: 100px;
@@ -164,7 +178,7 @@ body::before {
     }
     .dots {
         width: 20%;
-        top: 85%;
+        top: 80%;
     }
 }
 
